# mtgHPC

./: .gitignore  BuildandRun.sh  Cuda  KMeansCuda.h  KMeansMPI.cpp  KMeansMPICuda.cpp  KMeansMPICuda.cu  KMeansOpenMP.cpp  KMeansSerial.cpp  KmeanSerial.cpp  MPI  OpenMP  README.md  Serial  batch.sh  cuda  kmean.cu  kmeanChatGPT.cu  kmeanKernel.cu  kmeanKernel.cuh  pyproject.toml  scryfallScraper.py  utils.cpp  utils.h  viz.py
